--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,6 +29,9 @@
               <ul class="dropdown-menu">
                 <li><%= link_to 'Wantランキング', rankings_want_path %></li>
               </ul>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Wantランキング', rankings_want_path %></li>
+              </ul>
             </li>
 
             <li class="dropdown">
